--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
 <body>
   <div class="calculator">
     <div class="contatiner">
-         <div class="back">back</div>
-    <div class="cleaner">clear</div>
-    <div class="devision">/</div>
-    <div class="multiply">*</div>
-    <div class="sum">+</div>
-    <div class="sub">-</div>
-    <div class="el_7">7</div>
-    <div class="el_8">8</div>
-    <div class="el_9">9</div>
-    <div class="el_4">4</div>
-    <div class="el_5">5</div>
-    <div class="el_6">6</div>
-    <div class="el_1">1</div>
-    <div class="el_2">2</div>
-    <div class="el_3">3</div>
-    <div class="el_0">0</div>
-    <div class="piont">.</div>
-    <div class="ans">=</div>
+      <!-- <div class="screen">0</div> -->
+      
+      <button class="back span-2">back</div>
+      <div class="cleaner span-2">clear</div>
+      <div class="btn">7</div>
+      <div class="btn">8</div>
+      <div class="el_9">9</div>
+      <div class="devision">/</div>
+      <div class="el_4">4</div>
+      <div class="el_5">5</div>
+      <div class="el_6">6</div>
+      <div class="multiply">*</div>
+      <div class="el_1">1</div>
+      <div class="el_2">2</div>
+      <div class="el_3">3</div>
+      <div class="sum">+</div>
+      <div class="piont">.</div>
+      <div class="el_0">0</div>
+      <div class="ans">=</div>
+      <div class="sub">-</div>
     </div>
   </div>
 
