--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
 </head>
 <body>
   <div class="calculator">
+      <div class="screen">0</div>
     <div class="contatiner">
-      <!-- <div class="screen">0</div> -->
       
-      <button class="back span-2">back</div>
-      <div class="cleaner span-2">clear</div>
-      <div class="btn">7</div>
-      <div class="btn">8</div>
-      <div class="el_9">9</div>
-      <div class="devision">/</div>
-      <div class="el_4">4</div>
-      <div class="el_5">5</div>
-      <div class="el_6">6</div>
-      <div class="multiply">*</div>
-      <div class="el_1">1</div>
-      <div class="el_2">2</div>
-      <div class="el_3">3</div>
-      <div class="sum">+</div>
-      <div class="piont">.</div>
-      <div class="el_0">0</div>
-      <div class="ans">=</div>
-      <div class="sub">-</div>
+      <button class="back span-2">back</button>
+      <button class="cleaner span-2">clear</button>
+      <button class="btn">7</button>
+      <button class="btn">8</button>
+      <button class="btn">9</button>
+      <button class="btn">/</button>
+      <button class="btn">4</button>
+      <button class="btn">5</button>
+      <button class="btn">6</button>
+      <button class="btn">*</button>
+      <button class="btn">1</button>
+      <button class="btn">2</button>
+      <button class="btn">3</button>
+      <button class="btn">+</button>
+      <button class="btn">.</button>
+      <button class="btn">0</button>
+      <button class="btn">=</button>
+      <button class="btn">-</button>
     </div>
   </div>
-
+  <script src="index.js"></script>
 </body>
 </html>
