--- a/index.html
+++ b/index.html
@@ -9,27 +9,30 @@
 </head>
 <body>
   <div class="calculator">
-      <div class="screen">0</div>
+    <div class="screen">
+      <div data-output class="ans_screen"></div>
+      <div data-input class="input_screen">0</div>
+    </div>
     <div class="contatiner">
       
-      <button class="back span-2">back</button>
-      <button class="cleaner span-2">clear</button>
-      <button class="btn">7</button>
-      <button class="btn">8</button>
-      <button class="btn">9</button>
-      <button class="btn">/</button>
-      <button class="btn">4</button>
-      <button class="btn">5</button>
-      <button class="btn">6</button>
-      <button class="btn">*</button>
-      <button class="btn">1</button>
-      <button class="btn">2</button>
-      <button class="btn">3</button>
-      <button class="btn">+</button>
-      <button class="btn">.</button>
-      <button class="btn">0</button>
-      <button class="btn">=</button>
-      <button class="btn">-</button>
+      <button data-back class="back span-2">back</button>
+      <button data-clear class="cleaner span-2">clear</button>
+      <button data-number class="btn">7</button>
+      <button data-number class="btn">8</button>
+      <button data-number class="btn">9</button>
+      <button data-operator class="btn">/</button>
+      <button data-number class="btn">4</button>
+      <button data-number class="btn">5</button>
+      <button data-number class="btn">6</button>
+      <button data-operator class="btn">*</button>
+      <button data-number class="btn">1</button>
+      <button data-number class="btn">2</button>
+      <button data-number class="btn">3</button>
+      <button data-operator class="btn">+</button>
+      <button data-number class="btn">.</button>
+      <button data-number class="btn">0</button>
+      <button data-equals class="btn">=</button>
+      <button data-operator class="btn">-</button>
     </div>
   </div>
   <script src="index.js"></script>
